# kinematics_library

./: .clang-format  .gitignore  README.md
include/kinematics-library/: errors.h  geometry.h  (+6 more)
python/: MANIFEST.in  pyproject.toml  setup.py
python/include/kinematics-library/: helpers.h  pytypes.h
python/src/: dcm_mul_py.c  dcm_py.c  dcm_rotate_py.c  dcm_transform_py.c  dcm_transpose_py.c  doc_help_py.c  geometry_vincenty_direct_py.c  geometry_vincenty_inverse_py.c  kinematic_vector_add_py.c  kinematic_vector_div_py.c  kinematic_vector_mapping_py.c  kinematic_vector_mul_py.c  kinematic_vector_py.c  kinematic_vector_sub_py.c  kinematics_library_module_py.c  quaternion_angle_py.c  quaternion_axis_py.c  quaternion_conjugate_py.c  quaternion_inverse_py.c  quaternion_mul_py.c  quaternion_norm_py.c  quaternion_py.c  quaternion_rotate_py.c  quaternion_square_py.c  quaternion_transform_py.c
python/src/transforms/: transforms_aer_to_ned_py.c  transforms_ecef_to_lla_py.c  transforms_ecef_to_ned_py.c  transforms_library_module_py.c  transforms_lla_to_ecef_py.c  transforms_lla_to_ned_py.c  transforms_ned_to_aer_py.c  transforms_ned_to_ecef_py.c  transforms_ned_to_lla_py.c
python/tests/: DCM_test.py  KinematicVector_test.py  Quaternion_test.py  aer_to_ned_test.py  ecef_to_lla_test.py  ecef_to_ned_test.py  lla_to_ecef_test.py  lla_to_ned_test.py  ned_to_aer_test.py  ned_to_ecef_test.py  ned_to_lla_test.py  vincenty_direct_test.py  vincenty_inverse_test.py
src/: geometry.c  kinematic_vector.c  kinematic_vector.cpp  rotations.c  rotations.cpp  transforms.c  transforms.cpp
(+48 files in other folders)
